# spark-connect-rust

./: .gitignore  Cargo.toml  README.adoc  build.rs
cli/: Cargo.toml
cli/src/: main.rs
spark-connect/: Cargo.toml  build.rs
spark-connect/src/: error.rs  lib.rs
spark-connect/tests/: sql.rs
src/: error.rs  lib.rs  main.rs
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
