[package]
name = "spark-connect-rust"
version = "0.1.0"
edition = "2021"
keywords = ["spark", "spark-connect"]
license = "Apache-2.0"
homepage = "https://www.buoyantdata.com"
repository = "https://github.com/buoyant-data/spark-connect-rust"
authors = [
    "R. Tyler Croy <rtyler@brokenco.de>",
]

[dependencies]
# Pulling this in simply for the use of the prettyprint in the CLI
arrow = { version = "43", features = ["prettyprint"]}
arrow-buffer = "43"
arrow-ipc = "43"
prost = "0.11"
prost-types = "0.11.9"
rustyline = { version = "12", features = ["with-file-history"]}
tokio = { version = "1", features = ["full"] }
tonic = "*"

[build-dependencies]
tonic-build = "0.9.2"
