[package]
name = "spark-connect-cli"
version = "0.1.0"
edition = "2021"
keywords = ["spark", "spark-connect"]
license = "Apache-2.0"
homepage = "https://www.buoyantdata.com"
repository = "https://github.com/buoyant-data/spark-connect-rust"
authors = [
    "R. Tyler Croy <rtyler@brokenco.de>",
]

[dependencies]
rustyline = { version = "12", features = ["with-file-history"]}
spark-connect = { path = "../spark-connect", features = ["prettyprint"] }
tokio = { version = "1", features = ["macros", "rt", "net"] }
