[package]
name = "spark-connect"
version = "0.1.0"
edition = "2021"
keywords = ["spark", "spark-connect"]
license = "Apache-2.0"
homepage = "https://www.buoyantdata.com"
repository = "https://github.com/buoyant-data/spark-connect-rust"
authors = [
    "R. Tyler Croy <rtyler@brokenco.de>",
]

[features]
default = [
    "getrandom",
    "http",
    "tokio",
    "tonic/codegen",
    "tonic/prost",
    "tonic/transport",
]
wasm = [
    "tonic/codegen",
    "tonic/prost",
    "getrandom/js",
]

[dependencies]
arrow-array = "43"
arrow-buffer = "43"
arrow-ipc = "43"
arrow-schema = "43"
# Transient dependency which has a feature needing to be toggled for wasm
getrandom = { version = "*", optional = true }
http = { version = "0.2.9", optional = true }
prost = "0.11"
prost-types = "0.11.9"
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true}
# Allow disabling `transport` which cannot build on wasm
tonic = { version = "0.9.2",  default-features = false, optional = true }
uuid = { version = "*", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9.2"
